SERVER-81226 Do not acquire RSTL for commit and abort of split transactions.